--- a/Documentation/Assignment 1/tex/uml_1.tex
+++ b/Documentation/Assignment 1/tex/uml_1.tex
@@ -2,8 +2,8 @@
 \section{Question 1}
 ``What is the difference between aggregation and composition? Where are composition and aggregation
 used in your project? Describe the classes and explain how these associations work.''
-
-The difference between aggregation and composition is that in composition class A owns class B (or contains). While in aggregation, class A uses class B (or consists of), so the classes are independent of each other. 
+\\
+\noindent The difference between aggregation and composition is that in composition class A owns class B (or contains). While in aggregation, class A uses class B (or consists of), so the classes are independent of each other. 
 \\\\
 In our project there are both examples of aggregation as well as composition, as listed below:
 
