Updated the requirements document using comments on github. <documentation

--- a/Documentation/Assignment 2/tex/assign_2_functional.tex
+++ b/Documentation/Assignment 2/tex/assign_2_functional.tex
@@ -6,11 +6,10 @@ In this document the requirements for assignment 2 will be stated. There will be
 \section{Must Have}
 \begin{itemize}
 \itemsep0em
-\item The player must be able to fall through the floor.
-\item The player must reappear after falling through the floor at the corresponding square in the ceiling.
-\item The monsters must be able to fall though the floor.
-\item The monsters must reappear after falling through the floor at the corresponding square in the ceiling.
-\item The monsters must be able to jump.
+\item The player must be able to fall through a hole in the floor.
+\item The player must reappear after falling through a hole in the floor at a corresponding hole in the ceiling.
+\item The monsters must be able to fall though a hole in the floor.
+\item The monsters must reappear after falling through a hole in the floor at a corresponding hole in the ceiling.
 \item The monsters must be able to jump and move around randomly.
 \item The player must be able to jump in a more natural way, so a decrease in speed when the player jumps.
 \item The player must be able to fall in a more natural way, so an increase in speed when the player falls.
@@ -24,7 +23,7 @@ In this document the requirements for assignment 2 will be stated. There will be
 \section{Should Have}
 \begin{itemize}
 \itemsep0em
-\item The bubbles should be able to float through the ceilings, but stop at the top ceiling.
+\item The bubbles should be able to float through the platforms, but should stop at the ceiling.
 \item The player should be able to jump on a bubble, and use it like a trampoline.
 \end{itemize}
 
