Fixed requirements document.
Missed a few lines, but they have now been added.

<documentation

--- a/Documentation/Assignment 2/tex/assign_2_functional.tex
+++ b/Documentation/Assignment 2/tex/assign_2_functional.tex
@@ -30,10 +30,10 @@ In this document the requirements for assignment 2 will be stated. There will be
 \section{Could Have}
 \begin{itemize}
 \itemsep0em
-\item The player could be able to jump through the ceiling.
-\item The player could reappear after jumping through the ceiling at the corresponding square in the floor.
-\item The monster could be able to jump through the ceiling.
-\item The monster could reappear after jumping through the ceiling at the corresponding square in the floor.
+\item The player could be able to jump through a hole in the ceiling.
+\item The player could reappear after jumping through a hole in the ceiling at the corresponding hole in the floor.
+\item The monster could be able to jump through a hole in the ceiling.
+\item The monster could reappear after jumping through a hole in the  ceiling at the corresponding hole in the floor.
 \item The bubbles could pop when they disappear.
 \item The game could play music when played.
 \end{itemize}
