Updated the assignment document.
Added the Responsibility Driven Design that Jim wrote to the assignment 2
file.

<documentation

--- a/Documentation/Assignment 2/Assignment 2/main.tex
+++ b/Documentation/Assignment 2/Assignment 2/main.tex
@@ -60,8 +60,11 @@
   {}
 
 \begin{document} 
-
 \input{tex/titel.tex}
+\tableofcontents
+\thispagestyle{empty}
+\setcounter{page}{0}
+\input{tex/crc.tex}
 \input{tex/uml.tex}
 %Your text files go here
 \nocite{*}
