Initial version of Exercise 3 of Assignment 3. Also added minor styling improvements to the complete LaTeX file. <documentation,layout

--- a/Documentation/Assignment 3/Assignment 3 Answers/main.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/main.tex
@@ -27,6 +27,8 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
+\setlength{\parindent}{0pt}
+
 \lstset{frame=tb,
   language=Matlab,
   aboveskip=3mm,
