--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
@@ -1,4 +1,3 @@
 \section{Question 2}
 
-''During the analysis and design phases of this extension use responsibility driven design and UML
-(push to the repository the single PDF file including all the documents produced) (15 pts).''
+``During the analysis and design phases of this extension use responsibility driven design and UML (push to the repository the single PDF file including all the documents produced) (15 pts).''
