--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_2.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_2.tex
@@ -1,3 +1,3 @@
 \section{Question 2}
 
-''2. Make a class diagram of how the pattern is structured statically in your code (5 pts).''
+``Make a class diagram of how the pattern is structured statically in your code (5 pts).'' \\
