--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/titel.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/titel.tex
@@ -24,11 +24,12 @@
 
 \begin{minipage}{0.5\textwidth}
 \emph{Authors:}\\     
-Matthijs Verzijl - 4282604\\
 Emilie de Bree - 4247558\\
-Jim Hommes - 4306090\\
 Toine Hartman - 4305655\\
-Jeffrey Helgers - 4318749 \\\\
+Jeffrey Helgers - 4318749 \\
+Jim Hommes - 4306090\\
+Joost Pluim - 4162269 \\
+Matthijs Verzijl - 4282604\\\\
 \emph{Supervisor:} \\
 Alberto Bacchelli \\\\
 \emph{Teaching Assistant:} \\
