Fixed comments Lilly on PR <documentation

--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/SEE_3.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/SEE_3.tex
@@ -3,7 +3,7 @@
 ``Enumerate 3 other factors that could have been studied in the paper and why you think they would belong to good/bad practice (4 pts).'' \\
 
 \begin{enumerate}
-	\item \textbf{Test Driven Development}: This would probably a good practice. Although Test Driven Development might take more time and could therefore maybe end up in the `Cost over Time'-quarter, it would probably end up as a Good Practice. This is because the developed software will be easier maintainable and will be easier to verify for bugs. Because of that the quality of the software will improve, which will mean it will costs relatively less than when bugs have to removed at the end of development for example. Test Driven Development also means investing a little more time in testing while developing software. This could result in a longer duration, but we are convinced that this little investment of time will result in lower overall duration of the project, since bugs will be found easier and therefore also prevented easier. 
-	\item \textbf{Including Design Patters}: This would be probably be a good practice mainly because of the same reasons as Test Driven Development. Initially working with Design Patters might take a bit more time and will require persons with more skills (so more expensive people). However in the end it will results in easily extendable and maintainable software which will result in a positive practice. 
+	\item \textbf{Test Driven Development}: This would probably be a good practice. Although Test Driven Development might take more time and could therefore maybe end up in the `Cost over Time'-quarter, it would probably end up as a Good Practice. This is because the developed software will be easier maintainable and will be easier to verify for bugs. Because of that the quality of the software will improve, which will mean it will costs relatively less than when bugs have to removed at the end of development for example. Test Driven Development also means investing a little more time in testing while developing software. This could result in a longer duration, but we are convinced that this little investment of time will result in lower overall duration of the project, since bugs will be found easier and therefore also prevented easier. 
+	\item \textbf{Including Design Patterns}: This would be probably be a good practice mainly because of the same reasons as Test Driven Development. Initially working with Design Patterns might take a bit more time and will require persons with more skills (so more expensive people). However in the end it will results in easily extendable and more maintainable software which will result in a positive practice. 
 	\item \textbf{Visual Development Process}: with this we mean that during the development process, intensive use is made of visualisation (such as UML's) to keep track of for example software structure or model relations. We believe that this will result in a global understanding of the desired structure of the application which will result in lower cost and duration. It is easier to discuss problems, improve software or add new features, once it is easy to understand how the application is constructed. Visualisation is a very good way of doing all of this. 
 \end{enumerate}
