--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_3.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_3.tex
@@ -1,3 +1,15 @@
 \section{Question 3}
 
 ''3. Make a sequence diagram of how the pattern works dynamically in your code (5 pts). ''
+\\
+\\
+The observer design pattern, the player has a new movement and he notifies his observers that some change is made.
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{sequenceDiagramObserver}
+\end{figure}
+\\
+\\
+The strategy design pattern.
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{sequenceDiagramStrategy}
+\end{figure}
