Added the class diagram images.
<documentation

--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_2.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/design_patterns_2.tex
@@ -1,3 +1,11 @@
 \section{Question 2}
 
 ''2. Make a class diagram of how the pattern is structured statically in your code (5 pts).''
+
+\subsection{Class Diagram for Strategy}
+
+\includegraphics[width=100mm]{classDiagramStrategy.jpg}
+
+\subsection{Class Diagram for Observer}
+
+\includegraphics[width=100mm]{classDiagramObserver.jpg}
