Updated all the SEE question.
<documentation

--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/SEE_4.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/SEE_4.tex
@@ -1,9 +1,7 @@
 \section{Question 4}
 
-``Describe in detail 3 bad practice factors and why they belong to the bad practice group (4 pts).'' \\
-
 \begin{enumerate}
-	\item \textbf{Rules \& Regulations driven}: Having to comply with lots of Rules \& Regulations, means lots of time has to be spent on checking whether the software won't violate any of these Rules \& Regulations. This can easily result in a duration way longer than projects with comparable size. Having to comply to these Rules \& Regulations can also easily result in more reviews being necessary and therefor more costs. 
-	\item \textbf{Dependencies with other systems}: As one can imagine, once a certain dependency changes, bugs can be an easy result. Sometimes developers can control the dependencies themselves, to prevent many changes. However lots of times, dependencies can be outside of the range of the developers of the project. Once a dependency changes in a late stage of development, this can lead to large adjustments in code, which on its turn can also easily result in bugs. Both of these factors will easily result in a longer duration and higher costs. 
-	\item \textbf{Once-only project}: For a once only project, it might be necessary to do a lot of initial work on the setup of a project. When continuing a project, this work has already been done which results in a shorter duration of the project. When setting up a project, the exact setup might still be unclear, what can result in changing the setup once the team already started developing. Therefore a Once-only project has a large chance of being a bad practice. 
+	\item \textbf{Rules \& Regulations driven}: Having to comply with a lot of Rules \& Regulations, means having to spend a lot of time on checking whether the software won't violate any of these Rules \& Regulations. This can easily result in a project duration that is longer than projects with comparable size. Having to comply to these Rules \& Regulations can also easily result in more reviews being necessary and therefore more costs. 
+	\item \textbf{Dependencies with other systems}: As one can imagine, once a certain dependency changes, bugs can easily occur. Sometimes developers can control the dependencies themselves, to prevent many changes. However often dependencies can be outside of the range of the developers of the project. Once a dependency changes in a late stage of development, this can lead to large adjustments in code, which in its turn can also easily result in bugs. Both of these factors will result in a longer duration and higher costs. 
+	\item \textbf{Once-only project}: For a Once Only project, it might be necessary to do a lot of initial work on the set-up of a project. When continuing a project, this work has already been done which results in a shorter duration of the project. When setting up a project, the exact set-up might still be unclear, what can result in changes to the set-up once the team already started developing. This wastes time and therefore a Once-only project often has a large chance of being a bad practice. 
 \end{enumerate}
