Format, to make things easier for others.
<documentation

--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
@@ -35,6 +35,7 @@ This class is responsible for handling the effect, triggered by Powerup. \\
 It collaborates with Powerup to know when an effect is triggered. \\
 
 \subsection{The PowerUps: UML}
+
 \includegraphics[width=100mm]{uml_powerups.jpg}\\[1cm]
 The addition of a powerup is achieved by making a new class. This class is the instance of a powerup, as seen in the game. That is why it extends SpriteBase. 
 \\\\
@@ -42,6 +43,18 @@ When a powerup is picked up, it triggers an effect. This effects for example Pla
 
 
 \subsection{Multiple Lives: Responsibility Driven Design}
+
+\subsubsection{Method}
+\textit{Responsibility:} \\
+\textit{Collaborations:}
+
 \subsection{Multiple Lives: UML}
+
 \subsection{A Score: Responsibility Driven Design}
+
+
+\subsubsection{Method}
+\textit{Responsibility:} \\
+\textit{Collaborations:}
+
 \subsection{A Score: UML}
