--- a/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
+++ b/Documentation/Assignment 3/Assignment 3 Answers/tex/20-time_2.tex
@@ -2,10 +2,6 @@
 
 \section{Question 2}
 
-''During the analysis and design phases of this extension use responsibility driven design and UML
-(push to the repository the single PDF file including all the documents produced) (15 pts).''
-
-
 \subsection{Introduction}
 In this section the Responsibility Driven Designs and the UML for the design for this sprint can be found. The new features that have been added include having multiple lives, monsters dropping powerups and a score system. The Assignment 3 Requirements Document contain the requirements for these new features.
 
@@ -70,8 +66,26 @@ On a collision with a monster a life gets subtracted from the number of lives of
 \subsection{A Score: Responsibility Driven Design}
 
 
-\subsubsection{Method}
+\subsubsection{Powerup}
 \textit{Responsibility:} \\
-\textit{Collaborations:}
+This class is responsible for the triggering the effects when a powerup is picked up. It increases the score when a coin is picked up. \\
+\textit{Collaborations:} \\
+This collaborates with Player to let it know that the score has increased. 
+
+\subsubsection{Player}
+\textit{Responsibility:} \\
+This class keeps a track of the player's score.\\
+\textit{Collaborations:} \\
+This collaborates with Powerup and Monster to get information about when the score changes.
+
+\subsubsection{Monster}
+\textit{Responsibility:} \\
+This class is responsible for the triggering the effects when a player collides with a monster. In this case the score will decrease. \\
+\textit{Collaborations:} \\
+This collaborates with Player to let it know that the score has decreased.
 
 \subsection{A Score: UML}
+
+\includegraphics[width=100mm]{uml_score.jpg}\\[1cm]
+
+On a collision with a monster the player's score will decrease. On contact with a coin power up, the player's score will increase.
