Added inCode snapshot to assignement document.
<documentation

--- a/Documentation/Assignment 4/Assignment 4 answers/tex/software_metrics_4.tex
+++ b/Documentation/Assignment 4/Assignment 4 answers/tex/software_metrics_4.tex
@@ -1,5 +1,5 @@
-\subsection{Avoided Fatal Flaw}
+\subsection{Third Fatal Flaw}
 
 \subsubsection{Design choices}
 
-\subsubsection{The explanation}
+\subsubsection{The fix or the explanation}
