Updated Requirements document assignment 4 after feedback from Aaron <documentation

--- a/Documentation/Assignment 4/Assignment 4 requirements/tex/assign_4_functional.tex
+++ b/Documentation/Assignment 4/Assignment 4 requirements/tex/assign_4_functional.tex
@@ -6,26 +6,27 @@ In this document the requirements for assignment 4 will be stated. In this sprin
 \section{Must Have}
 \begin{itemize}
 \itemsep0em
-\item The game must be played with two players on the same computer. 
+\item The game shall support a local multiplayer mode.
+\item The game shall support two or more players in multiplayer-mode. 
 \item Every player must have their own input controls to move the player.
-\item Every player must have a different character.
-\item Every player must have their own score and lives.
-\item The game must end when both players doesn't have any lives left.
-\item The game startscreen must have the option to select single-player or multi-player. 
+\item Every player shall have a different character.
+\item Every player shall have their own score and lives.
+\item The game shall end when both players doesn't have any lives left.
+\item The game startscreen shall have the option to select single-player or multi-player. 
 \end{itemize}
 
 \section{Should Have}
 \begin{itemize}
 \itemsep0em
-\item The game should have a help screen displaying both players controls. 
-\item Every player should start the game at a specified point in the level file. 
+\item The game shall have a help screen displaying both players controls. 
+\item Every player shall start the level at a different, predefined point. 
 \end{itemize}
 
 \section{Could Have}
 \begin{itemize}
 \itemsep0em
-\item A player could wrap the other player in a bubble and thereby decrease the other players lives by 1. 
-\item When a level is completed both players could receive a live so that dead players revive with one live again. 
+\item A player shall be able to wrap the other player in a bubble and thereby decrease the other players lives by 1. 
+\item When a level is completed both players shall receive a live so that dead players revive with one live again. 
 \end{itemize}
 
 \section{Won't Have}
