--- a/Documentation/Assignment 5/Assignment 5 answers/tex/wrap_up.tex
+++ b/Documentation/Assignment 5/Assignment 5 answers/tex/wrap_up.tex
@@ -9,3 +9,11 @@ software systems. To help yourself in this task, you can also consider the first
 you submitted for evaluation after two weeks and compare it with the version you submit as a final product
 for evaluation. Submit an essay of approximately 1,000 words with your reflection'
 
+\section{Essay}
+The course Software Engineering Methods of course involved the learning of certain engineering methods, tactics of working in a group, coping with deadlines and planning work in a group. But most of all it was a great experience by doing. By first sprinting in making a game in 2 weeks, and afterwards implementing most of the information heard in lectures, it was a journey of learning by doing. When doing this we of course experienced different bumps in the road, but all of these made us as a group more experienced, efficient and eventually of course made our game better. We will take you through our journey by highlighting a couple aspects:
+
+\subsection{Code quality}
+When going back to our initial product, we of course see that the product was lacking features, and was very limited in it's options. But moreover, we see that our code quality has improved drastically. Implementing for example Design Patterns at first sounded unnecessary, time-consuming and above all irrelevant. However when learning about these patterns and once implementing them, we started to realise this could maybe be useful. Once the design patterns were actually implemented it became obvious that when building on, these design patterns were actually really helpful. They provided a basis for easily adding new features or extending already existing features. Therefor they were actually very useful in extending and improving our game. 
+
+\subsection{Teamwork}
+
